Resize iframe for publications

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base target="_top"/>
     <title>
       {% if page.title %}{{ site.title }} - {{ page.title }}{% else %}{{ site.title }}{% endif %}
     </title>
