--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 <nav>
   <ul class="navbar">
     <li class="navbar">
-      <a href="{{site.baseurl}}/publications">
+      <a href="{{site.baseurl}}/publications/">
 	Publications
       </a>
     </li>
