Restructure publications page

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -30,7 +30,7 @@ James Baxter, Ana Cavalcanti, Andy Wellings, and Leo Freitas.
   New York, NY, USA, 2015. ACM.
 [&nbsp;<a href="publications_bib.html#BCWF2015">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1145/2822304.2822307">DOI</a>&nbsp;| 
-<a href="http://www-users.york.ac.uk/publications/files/BCWF2015">http</a>&nbsp;]
+<a href="files/BCWF2015.pdf">.pdf</a>&nbsp;]
 
 </td>
 </tr>
@@ -47,7 +47,7 @@ Leo Freitas, James Baxter, Ana Cavalcanti, and Andy Wellings.
  Springer International Publishing, Cham, 2016.
 [&nbsp;<a href="publications_bib.html#FBCW2016">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1007/978-3-319-33693-0_5">DOI</a>&nbsp;| 
-<a href="http://www-users.york.ac.uk/publications/files/FBCW2016">http</a>&nbsp;]
+<a href="files/FBCW2016.pdf">.pdf</a>&nbsp;]
 
 </td>
 </tr>
