Fix author list in final publication

--- a/_includes/publications_bib.html
+++ b/_includes/publications_bib.html
@@ -168,9 +168,9 @@
 
 <a name="cavalcanti2021robostar"></a><pre>
 @inbook{<a href="publications.html#cavalcanti2021robostar">cavalcanti2021robostar</a>,
-  author = {A.~L.~C.~Cavalcanti and W.~Barnett and J.~Baxter and
-                  G.~Carvalho and M.~C.~Filho and A.~Miyazawa and
-                  P.~Ribeiro and A.~C.~A.~Sampaio},
+  author = {Cavalcanti, Ana and Barnett, Will and Baxter, James
+                  and Carvalho, Gustavo and Miyazawa, Alvaro and
+                  Ribeiro, Pedro and Sampaio, Augusto},
   editor = {A.~L.~C.~Cavalcanti and B.~Dongol and R.~Hierons and
                   J.~Timmis and J.~C.~P.~Woodcock},
   title = {RoboStar Technology: A Roboticist's Toolbox for
