Update discussion of current research and publications list

--- a/_includes/publications_bib.html
+++ b/_includes/publications_bib.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<h1>publications.bib</h1><a name="BCWF2015"></a><pre>
-@inproceedings{<a href="publications.html#BCWF2015">BCWF2015</a>,
+<h1>publications.bib</h1><a name="baxter2015safety"></a><pre>
+@inproceedings{<a href="publications.html#baxter2015safety">baxter2015safety</a>,
   author = {Baxter, James and Cavalcanti, Ana and Wellings, Andy
                   and Freitas, Leo},
   title = {Safety-Critical Java Virtual Machine Services},
@@ -31,27 +31,8 @@
 }
 </pre>
 
-<a name="FBCW2016"></a><pre>
-@inbook{<a href="publications.html#FBCW2016">FBCW2016</a>,
-  author = {Freitas, Leo and Baxter, James and Cavalcanti, Ana
-                  and Wellings, Andy},
-  editor = {{\'A}brah{\'a}m, Erika and Huisman, Marieke},
-  title = {Modelling and Verifying a Priority Scheduler for an
-                  SCJ Runtime Environment},
-  booktitle = {Integrated Formal Methods: 12th International
-                  Conference, IFM 2016, Reykjavik, Iceland, June 1-5,
-                  2016, Proceedings},
-  year = 2016,
-  publisher = {Springer International Publishing},
-  address = {Cham},
-  pages = {63--78},
-  isbn = {978-3-319-33693-0},
-  doi = {10.1007/978-3-319-33693-0_5}
-}
-</pre>
-
-<a name="Baxter2017"></a><pre>
-@inproceedings{<a href="publications.html#Baxter2017">Baxter2017</a>,
+<a name="baxter2017algebraic"></a><pre>
+@inproceedings{<a href="publications.html#baxter2017algebraic">baxter2017algebraic</a>,
   author = {Baxter, James and Cavalcanti, Ana},
   title = {{Algebraic Compilation of Safety-Critical Java
                   Bytecode}},
@@ -67,8 +48,8 @@
 }
 </pre>
 
-<a name="Baxter2018"></a><pre>
-@phdthesis{<a href="publications.html#Baxter2018">Baxter2018</a>,
+<a name="baxter2018ahead"></a><pre>
+@phdthesis{<a href="publications.html#baxter2018ahead">baxter2018ahead</a>,
   author = {Baxter, James},
   title = {{Ahead-of-time Algebraic Compliation for
                   Safety-Critical Java}},
@@ -78,8 +59,84 @@
 }
 </pre>
 
-<a name="FBCAW2018"></a><pre>
-@inproceedings{<a href="publications.html#FBCAW2018">FBCAW2018</a>,
+<a name="baxter2022sound"></a><pre>
+@article{<a href="publications.html#baxter2022sound">baxter2022sound</a>,
+  title = {Sound reasoning in tock-CSP},
+  author = {Baxter, James and Ribeiro, Pedro and Cavalcanti, Ana},
+  journal = {Acta Informatica},
+  volume = {59},
+  number = {1},
+  pages = {125--162},
+  year = {2022},
+  publisher = {Springer}
+}
+</pre>
+
+<a name="baxter2023testing"></a><pre>
+@article{<a href="publications.html#baxter2023testing">baxter2023testing</a>,
+  title = {Testing using CSP models: time, inputs, and outputs},
+  author = {Baxter, James and Cavalcanti, Ana and Gazda, Maciej and Hierons, Robert M},
+  journal = {ACM Transactions on Computational Logic},
+  volume = 24,
+  number = 2,
+  pages = {1--40},
+  year = 2023,
+  publisher = {ACM New York, NY}
+}
+</pre>
+
+<a name="cavalcanti2019testing"></a><pre>
+@inproceedings{<a href="publications.html#cavalcanti2019testing">cavalcanti2019testing</a>,
+  author = {Cavalcanti, Ana and Baxter, James and Hierons,
+                  Robert M. and Lefticaru, Raluca},
+  editor = {Beyer, Dirk and Keller, Chantal},
+  title = {Testing Robots Using CSP},
+  booktitle = {Tests and Proofs},
+  year = 2019,
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  pages = {21--38},
+  isbn = {978-3-030-31157-5}
+}
+</pre>
+
+<a name="cavalcanti2021robostar"></a><pre>
+@inbook{<a href="publications.html#cavalcanti2021robostar">cavalcanti2021robostar</a>,
+  author = {Cavalcanti, Ana and Barnett, Will and Baxter, James
+                  and Carvalho, Gustavo and Miyazawa, Alvaro and
+                  Ribeiro, Pedro and Sampaio, Augusto},
+  editor = {A.~L.~C.~Cavalcanti and B.~Dongol and R.~Hierons and
+                  J.~Timmis and J.~C.~P.~Woodcock},
+  title = {RoboStar Technology: A Roboticist's Toolbox for
+                  Combined Proof, Simulation, and Testing},
+  booktitle = {Software Engineering for Robotics},
+  year = 2021,
+  publisher = {Springer International Publishing},
+  pages = {249--293},
+  doi = {10.1007/978-3-030-66494-7_9},
+  url = {https://www-users.cs.york.ac.uk/%7Ealcc/publications/papers/CBBCFMRS21.pdf}
+}
+</pre>
+
+<a name="cavalcanti2021roboworld"></a><pre>
+@inproceedings{<a href="publications.html#cavalcanti2021roboworld">cavalcanti2021roboworld</a>,
+  author = {Cavalcanti, Ana and Baxter, James and Carvalho, Gustavo},
+  editor = {R.~Calinescu and C.~S.~Pasareanu},
+  title = {{RoboWorld}: Where Can My Robot Work?},
+  booktitle = {Software Engineering and Formal Methods - 19th
+                  International Conference, {SEFM} 2021, Virtual
+                  Event, December 6-10, 2021, Proceedings},
+  series = {Lecture Notes in Computer Science},
+  volume = 13085,
+  pages = {3--22},
+  publisher = {Springer},
+  year = 2021,
+  doi = {10.1007/978-3-030-92124-8\_1}
+}
+</pre>
+
+<a name="foster2018automating"></a><pre>
+@inproceedings{<a href="publications.html#foster2018automating">foster2018automating</a>,
   author = {Foster, Simon and Baxter, James and Cavalcanti, Ana
                   and Miyazawa, Alvaro and Woodcock, Jim},
   editor = {Bae, Kyungmin and {\"O}lveczky, Peter Csaba},
@@ -91,21 +148,6 @@
   address = {Cham},
   pages = {137--155},
   isbn = {978-3-030-02146-7}
-}
-</pre>
-
-<a name="CBHL2019"></a><pre>
-@inproceedings{<a href="publications.html#CBHL2019">CBHL2019</a>,
-  author = {Cavalcanti, Ana and Baxter, James and Hierons,
-                  Robert M. and Lefticaru, Raluca},
-  editor = {Beyer, Dirk and Keller, Chantal},
-  title = {Testing Robots Using CSP},
-  booktitle = {Tests and Proofs},
-  year = 2019,
-  publisher = {Springer International Publishing},
-  address = {Cham},
-  pages = {21--38},
-  isbn = {978-3-030-31157-5}
 }
 </pre>
 
@@ -137,50 +179,22 @@
 }
 </pre>
 
-<a name="baxter2021sound"></a><pre>
-@article{<a href="publications.html#baxter2021sound">baxter2021sound</a>,
-  month = apr,
-  title = {Sound reasoning in tock-{CSP}},
-  author = {Baxter, James and Ribeiro, Pedro and Cavalcanti, Ana},
-  year = 2021,
-  journal = {Acta Informatica},
-  url = {https://eprints.whiterose.ac.uk/174356/},
-  doi = {10.1007/s00236-020-00394-3}
-}
-</pre>
-
-<a name="cavalcanti2021roboworld"></a><pre>
-@inproceedings{<a href="publications.html#cavalcanti2021roboworld">cavalcanti2021roboworld</a>,
-  author = {Cavalcanti, Ana and Baxter, James and Carvalho, Gustavo},
-  editor = {R.~Calinescu and C.~S.~Pasareanu},
-  title = {{RoboWorld}: Where Can My Robot Work?},
-  booktitle = {Software Engineering and Formal Methods - 19th
-                  International Conference, {SEFM} 2021, Virtual
-                  Event, December 6-10, 2021, Proceedings},
-  series = {Lecture Notes in Computer Science},
-  volume = 13085,
-  pages = {3--22},
-  publisher = {Springer},
-  year = 2021,
-  doi = {10.1007/978-3-030-92124-8\_1}
-}
-</pre>
-
-<a name="cavalcanti2021robostar"></a><pre>
-@inbook{<a href="publications.html#cavalcanti2021robostar">cavalcanti2021robostar</a>,
-  author = {Cavalcanti, Ana and Barnett, Will and Baxter, James
-                  and Carvalho, Gustavo and Miyazawa, Alvaro and
-                  Ribeiro, Pedro and Sampaio, Augusto},
-  editor = {A.~L.~C.~Cavalcanti and B.~Dongol and R.~Hierons and
-                  J.~Timmis and J.~C.~P.~Woodcock},
-  title = {RoboStar Technology: A Roboticist's Toolbox for
-                  Combined Proof, Simulation, and Testing},
-  booktitle = {Software Engineering for Robotics},
-  year = 2021,
+<a name="freitas2016modelling"></a><pre>
+@inbook{<a href="publications.html#freitas2016modelling">freitas2016modelling</a>,
+  author = {Freitas, Leo and Baxter, James and Cavalcanti, Ana
+                  and Wellings, Andy},
+  editor = {{\'A}brah{\'a}m, Erika and Huisman, Marieke},
+  title = {Modelling and Verifying a Priority Scheduler for an
+                  SCJ Runtime Environment},
+  booktitle = {Integrated Formal Methods: 12th International
+                  Conference, IFM 2016, Reykjavik, Iceland, June 1-5,
+                  2016, Proceedings},
+  year = 2016,
   publisher = {Springer International Publishing},
-  pages = {249--293},
-  doi = {10.1007/978-3-030-66494-7_9},
-  url = {https://www-users.cs.york.ac.uk/%7Ealcc/publications/papers/CBBCFMRS21.pdf}
+  address = {Cham},
+  pages = {63--78},
+  isbn = {978-3-319-33693-0},
+  doi = {10.1007/978-3-319-33693-0_5}
 }
 </pre>
 
